force-app/main/default/objects/Credit_Risk_Appetite__c/Credit_Risk_Appetite__c.object-meta.xml
<CustomObject>
    <description>US:1931 DM - Risk Appetite information</description>
    <label>Credit Risk Appetite</label>
    <nameField>
        <label>Credit Risk Appetite Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Credit Risk Appetites</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>