force-app/main/default/objects/Credit_Risk_Appetite__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <description>Risk Appetite measured Country from PMRC process in Credit Risk</description>
    <inlineHelpText>Country where Credit Appetite is being measured</inlineHelpText>
    <label>Country</label>
    <length>50</length>
    <type>Text</type>
</CustomField>