force-app/main/default/objects/Credit_Risk_Appetite__c/fields/Country_Credit_Appetite__c.field-meta.xml
<CustomField>
    <fullName>Country_Credit_Appetite__c</fullName>
    <description>Risk Appetite Status of the Country / Sector / Sub-Sector from the monthly PMRC process</description>
    <inlineHelpText>Status shows current credit appetite for the given Country / Sector / Sub-Sector. 
Add – Add exposure,
Add ST – Add exposure, subject to certain specific criteria defined by PRMC, 
Hold – Keep exposure at current levels,
Reduce – Reduce exposure.</inlineHelpText>
    <label>Country / Sector / Sub-Sector Credit App</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Add</fullName>
            </value>
            <value>
                <fullName>Add ST</fullName>
            </value>
            <value>
                <fullName>Hold</fullName>
            </value>
            <value>
                <fullName>Reduce</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>