force-app/main/default/objects/Credit_Risk_Appetite__c/fields/Credit_Appetite_Comments__c.field-meta.xml
<CustomField>
    <fullName>Credit_Appetite_Comments__c</fullName>
    <description>Comments provided by the Risk team on the Sector / Country Appetite Status</description>
    <inlineHelpText>Comments feedback on the appetite status for Sector, Sub-Sector and Country</inlineHelpText>
    <label>Credit Appetite Comments</label>
    <length>50</length>
    <type>Text</type>
</CustomField>