force-app/main/default/objects/Credit_Risk_Appetite__c/fields/Sector__c.field-meta.xml
<CustomField>
    <fullName>Sector__c</fullName>
    <description>Risk Appetite Sector from PMRC process</description>
    <inlineHelpText>Industry sector as per Standard Bank Client Sectors where the Risk Status is allocated to</inlineHelpText>
    <label>Sector</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Consumer</fullName>
            </value>
            <value>
                <fullName>Financial Institutions</fullName>
            </value>
            <value>
                <fullName>Industrials</fullName>
            </value>
            <value>
                <fullName>Internal / Grouped</fullName>
            </value>
            <value>
                <fullName>Mining and Metals</fullName>
            </value>
            <value>
                <fullName>Oil and Gas</fullName>
            </value>
            <value>
                <fullName>Power and Infrastructure</fullName>
            </value>
            <value>
                <fullName>Real Estate</fullName>
            </value>
            <value>
                <fullName>Sovereign / Public Sector</fullName>
            </value>
            <value>
                <fullName>Telecoms and Media</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>