force-app/main/default/objects/Credit_Risk_Appetite__c/fields/Snapshot_Date__c.field-meta.xml
<CustomField>
    <fullName>Snapshot_Date__c</fullName>
    <description>The date that the risk appetite information is applicable for. This is found in the manual file as a dashboard heading</description>
    <label>Snapshot Date</label>
    <length>20</length>
    <type>Text</type>
</CustomField>