force-app/main/default/objects/Credit_Risk_Appetite__c/fields/Sub_Sector__c.field-meta.xml
<CustomField>
    <fullName>Sub_Sector__c</fullName>
    <description>Risk Appetite Sub-Sector from PMRC process in Credit Risk</description>
    <inlineHelpText>Industry sub-sector as per Standard Bank Client Sub-Sectors where the Credit Appetite is allocated to</inlineHelpText>
    <label>Sub-Sector</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Sector__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agriculture</fullName>
            </value>
            <value>
                <fullName>Agriculture Commodity Traders</fullName>
            </value>
            <value>
                <fullName>Airlines</fullName>
            </value>
            <value>
                <fullName>Alternative Investment Vehicles</fullName>
            </value>
            <value>
                <fullName>Asset Managers</fullName>
            </value>
            <value>
                <fullName>Automobiles</fullName>
            </value>
            <value>
                <fullName>Banks</fullName>
            </value>
            <value>
                <fullName>Base Metals</fullName>
            </value>
            <value>
                <fullName>Brokers and Exchanges</fullName>
            </value>
            <value>
                <fullName>Bulk Commodities</fullName>
            </value>
            <value>
                <fullName>Cement</fullName>
            </value>
            <value>
                <fullName>Central Banks</fullName>
            </value>
            <value>
                <fullName>Chemicals</fullName>
            </value>
            <value>
                <fullName>Coal</fullName>
            </value>
            <value>
                <fullName>Construction</fullName>
            </value>
            <value>
                <fullName>Construction Services</fullName>
            </value>
            <value>
                <fullName>Consumer Services</fullName>
            </value>
            <value>
                <fullName>Development Financial Institutions</fullName>
            </value>
            <value>
                <fullName>Diamonds</fullName>
            </value>
            <value>
                <fullName>Diversified Industrials</fullName>
            </value>
            <value>
                <fullName>Diversified Mining</fullName>
            </value>
            <value>
                <fullName>Education</fullName>
            </value>
            <value>
                <fullName>Equipment Manufacturers</fullName>
            </value>
            <value>
                <fullName>Food and Beverage</fullName>
            </value>
            <value>
                <fullName>Forestry</fullName>
            </value>
            <value>
                <fullName>Gas</fullName>
            </value>
            <value>
                <fullName>Gold</fullName>
            </value>
            <value>
                <fullName>Government Departments</fullName>
            </value>
            <value>
                <fullName>Healthcare</fullName>
            </value>
            <value>
                <fullName>Hotel and Leisure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>