force-app/main/default/objects/Credit_Risk_Appetite__c/fields/Sub_Sector_Country_Code__c.field-meta.xml
<CustomField>
    <fullName>Sub_Sector_Country_Code__c</fullName>
    <formula>UPPER(SUBSTITUTE(TEXT(Sector__c),&apos; &apos;,&apos;_&apos;))&amp;&apos;_&apos;&amp;UPPER(SUBSTITUTE(TEXT(Sub_Sector__c),&apos; &apos;,&apos;_&apos;))&amp;&apos;_&apos;&amp;UPPER(SUBSTITUTE(Country__c,&apos; &apos;,&apos;_&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sub-Sector Country Code</label>
    <type>Text</type>
</CustomField>